c heck in again and again

--- a/_config.yml
+++ b/_config.yml
@@ -31,7 +31,7 @@ about-author: Engineer, industry executive, research enthusiast. Avid learner wi
 # Contact links
 email: hoiyun.chen@gmail.com # Add your Email address
 phone: # Add your Phone number
-website: https://hoiyun-chen.github.io # Add your website
+website: https://hoiyun-chen.github.io/hoiyun-chen/ # Add your website
 github: hoiyun-chen # Add your Github handle
 twitter: '@ChrisChan' # Add your Twitter handle
 stackoverflow: stackoverflow # Add your stackoverflow account
